--- a/css/style.css
+++ b/css/style.css
@@ -240,3 +240,41 @@ ul li a:hover{
 .required {
 	color: red;
   }
+  .price {
+    color: grey;
+    font-size: 22px;
+  }
+  .card button {
+    border: none;
+    outline: 0;
+    padding: 12px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+    font-size: 18px;
+  }
+  
+  .card button:hover {
+    opacity: 0.7;
+  }
+
+  .procontainer {
+    width: 100%;
+    display:inline-table;
+  }
+  .contain {
+    max-width: 960px;
+    text-align: center;
+  }
+  .category {
+    position: relative;
+    display:inline-table;
+    float: left;
+    padding: 10px;
+  }
+
+
+
+  
