--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ ul li a:hover{
 }
 
 .content h1{
-	font-family: 'Times New Roman';
+	font-family: 'Ariel';
 	font-size: 50px;
 	padding-left: 20px;
 	margin-top: 9%;
@@ -312,4 +312,41 @@ ul li a:hover{
 }
 .balance .info i{
   margin-right: 2px;
+}
+ 
+/*fotter*/
+footer {
+    text-align: center;
+    padding: 20px;
+    background-color: white;
+    color: #5119f9;
+    height: auto; 
+  }
+.footer-content{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+}
+h3{
+    font-size: 2.1rem;
+    font-weight: 500;
+    text-transform: capitalize;
+    line-height: 3rem;
+}
+p{
+    max-width: 500px;
+    margin: 10px auto;
+    line-height: 28px;
+    font-size: 14px;
+    color: #5119f9;
+}
+.socials{
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-width: 1rem 0 3rem 0;
+    color: #5119f9;
 }
