--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -17,43 +17,41 @@ body {
 
 .main{
 	width: 100%;
-	background:rgb(66, 194, 237); 
+	background:#334756; 
 	background-position: center;
 	background-size: cover;
 	height: 109vh;
 }
 
-.navbar{
-	width: 1200px;
-	height: 75px;
-	margin: auto;
-}
+
 
 .icon{
 	width: 200px;
 	float: left;
 	height: 70px;
+    
 
 }
 
 .logo{
-color: #5119f9;
+color:#F0A500;
 font-size: 35px;
 font-family: Arial, Helvetica, sans-serif;
-padding-left: 20px;
+padding-left: 2px;
 float: left;
 padding-top: 10px;
+
 
 }
 
 .menu{
-	width: 800px;
+	width: 670px;
 	float: left;
 	height: 70px;
 }
 
 ul{
-	float: right;
+	float: left;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -61,14 +59,14 @@ ul{
 
 ul li{
 	list-style: none;
-	margin-left: 62px;
+	margin-right: 70px;
 	margin-top: 27px;
 	font-size: 14px;
 }
 
 ul li a{
 	text-decoration: none;
-	color: #fff;
+	color: #F0A500;
 	font-family: Arial;
 	font-weight: bold;
 	transition: 0.4s ease-in-out;
@@ -76,6 +74,273 @@ ul li a{
 
 ul li a:hover{
 	color: #5119f9;
+}
+
+.content{
+	width: 1200px;
+	height: auto;
+	margin: 100px;
+	color: #F0A500;
+	position:relative;
+}
+ 
+
+.content .par{
+	padding-left: 20px;
+	padding-bottom: 25px;
+	font-family: 'Ariel';
+	letter-spacing: 1.2px;
+	line-height: 30px;
+    font-size:medium ;
+
+}
+
+.content h1{
+	font-family: 'Ariel';
+	font-size: 50px;
+	padding-right: 200px;
+	margin-top: 5%;
+	letter-spacing: 2px;
+    
+}
+
+.content .join{
+	width: 160px;
+	height: 40px;
+	background:#082032 ;
+	border: none;
+	margin-bottom: 10px;
+	margin-left: 20px;
+	font-size: 18px;
+	border-radius: 10px;
+	cursor: pointer;
+}
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');  
+ *{  
+      padding: 0;  
+      margin: 0;  
+      box-sizing: border-box;  
+      font-family: 'Poppins', sans-serif;  
+      color: #F0A500;
+ }  
+ body{  
+      width: 100%;  
+      min-height: 100vh;  
+      background:#334756 ;  
+      display: flex;  
+      justify-content: center;  
+      align-items: center;  
+ }  
+ .container{  
+      max-width: 400px;  
+      width: 100%;  
+      box-shadow: 0px 0px 2px #E8E8E8;  
+      background: #fff;  
+      position: relative;  
+ }  
+ .container::before{  
+      content: "";  
+      width: 100%;  
+      height: 8px;  
+      position: absolute;  
+      top: -1px;  
+      border-top-left-radius: 3px;  
+      border-top-right-radius: 3px;  
+      background: #009688;  
+ }  
+ .container h2{  
+      text-align: center;  
+      margin-top: 20px;  
+ }  
+ .container form{  
+      width: 100%;  
+      padding: 20px 50px;  
+ }  
+ .container form .box{  
+      width: 100%;  
+      height: 40px;  
+      position: relative;  
+      border: 1px solid #DFDFDF;  
+      margin: 10px 0px;  
+ }  
+ .box .input-data,  
+ .box .select-data{  
+      position: absolute;  
+      top: 0;  
+      width: 90%;  
+      outline: none;  
+      border: 1px solid #DFDFDF;  
+      height: 100%;  
+      right: 0;  
+      padding-left: 5px;  
+ }  
+ .box .select-data{  
+      width: 100%;  
+ }  
+ .box span{  
+      position: absolute;  
+   top: -1px;  
+   left: 0%;  
+   font-size: 1.2em;  
+   padding: 5px;  
+ }  
+ .space{  
+      margin-top: 15px;  
+ }  
+ .pay{  
+      width: 10%;  
+      text-align: center;  
+      padding: 10px;  
+      outline: none;  
+      cursor: pointer;  
+      background: #082032;  
+      color: #F0A500;  
+      font-size: 1em;  
+      border: none;  
+ }  
+ @media (max-width: 424px) {  
+      .container form{  
+           padding: 20px;  
+      }  
+ } 
+ .container{
+	max-width: 400px;  
+	width: 100%;  
+	box-shadow: 0px 0px 2px #E8E8E8;  
+	background: #fff;  
+	position:relative;
+	display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+.container::before{
+	content: "";  
+	width: 100%;  
+	height: 8px;  
+	position: absolute;  
+	top: -1px;  
+	border-top-left-radius: 3px;  
+	border-top-right-radius: 3px;  
+	background: #F0A500;
+}
+ 
+.container h2{  
+		 text-align: center;  
+		 margin-top: 30px;
+}  
+.container form{  
+		 width: 100%;  
+		 padding: 20px 50px;  
+}  
+.container .box{  
+		 width: 100%;  
+		 height: 40px;  
+		 position: relative;  
+		 border: 1px solid #DFDFDF;  
+		 margin: 10px 0px;   
+}
+.required {
+	color: red;
+  }
+  .price {
+    color: grey;
+    font-size: 22px;
+  }
+  .card button {
+    border: none;
+    outline: 0;
+    padding: 12px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+    font-size: 18px;
+  }
+  
+  .card button:hover {
+    opacity: 0.7;
+  }
+
+  .procontainer {
+    width: 100%;
+    display:inline-table;
+  }
+  .contain {
+    max-width: 960px;
+    text-align: center;
+  }
+  .category {
+    position: relative;
+    display:inline-table;
+    float: left;
+    padding: 10px;
+  }
+
+ 
+/*fotter*/
+footer {
+    text-align: center;
+    padding: 8px;
+    background-color:#082032;
+    color: #F0A500;
+    height: auto; 
+  }
+.footer-content{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+}
+h3{
+    font-size: 2.1rem;
+    font-weight: 500;
+    text-transform: capitalize;
+    line-height: 3rem;
+}
+p{
+    max-width: 500px;
+    margin: 10px auto;
+    line-height: 28px;
+    font-size: 14px;
+    color: #F0A500;
+}
+.socials{
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-width: 200px;
+    color: #F0A500;
+}
+.socials li{
+    margin: 10px;
+}
+.socials li a{
+   text-decoration: none;
+   color: #F0A500;
+   border: 3px solid #F0A500;
+   padding: 8px;
+   border-radius: 50%;
+   width: 35px;
+
+}
+header {
+    text-align: center;
+    padding: 20px;
+    background-color: #082032;
+    color:white;
+    height: auto; 
+  }
+  .header-content{
+    display: flex;
+    align-items:flex-start;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
 }
 
 .history_lists{
@@ -106,7 +371,6 @@ table td{
   color: rgb(100, 100, 100);
 }
 
-/*  import google fonts */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
 *{
   margin: 0;
@@ -138,25 +402,7 @@ body{
   font-weight: 600;
   margin: 2rem 8rem 2rem 2rem;
 }
-.search_box{
-  display: flex;
-  align-items: center;
-}
-.search_box input{
-  padding: 9px;
-  width: 250px;
-  background: rgb(228, 228, 228);
-  border-top-left-radius: 5px;
-  border-bottom-left-radius: 5px;
-}
-.search_box i{
-  padding: 0.66rem;
-  cursor: pointer;
-  color: #fff;
-  background: #000;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
-}
+
 .header-icons{
   display: flex;
   align-items: center;
@@ -183,43 +429,6 @@ body{
   justify-content: space-between;
 }
 
-/* Side menubar section */
-nav{
-  background: #fff;
-}
-.side_navbar{
-  padding: 1px;
-  display: flex;
-  flex-direction: column;
-}
-.side_navbar span{
-  color: gray;
-  margin: 1rem 3rem;
-  font-size: 12px;
-}
-.side_navbar a{
-  width: 100%;
-  padding: 0.8rem 3rem;
-  font-weight: 500;
-  font-size: 15px;
-  color: rgb(100, 100, 100);
-}
-.links{
-  margin-top: 5rem;
-  display: flex;
-  flex-direction: column;
-}
-.links a{
-  font-size: 13px;
-}
-.side_navbar a:hover{
-  background: rgb(235, 235, 235);
-}
-.side_navbar .active{
-  border-left: 2px solid rgb(100, 100, 100);
-}
-
-/* Main Body Section */
 .main-body{
   width: 70%;
   padding: 1rem;
@@ -253,7 +462,7 @@ nav{
   margin: 1rem 0;
 }
 table{
-  background: #fff;
+  background: rgb(37, 37, 37);
   padding: 1rem;
   text-align: left;
   border-radius: 10px;
@@ -267,39 +476,4 @@ table th{
 table td{
   font-size: 13px;
   color: rgb(100, 100, 100);
-}
-
-
-
-/* Sidebar Section */
-.sidebar{
-  width: 15%;
-  padding: 2rem 1rem;
-  background: #fff;
-}
-.sidebar h4{
-  margin-bottom: 1.5rem;
-}
-.sidebar .balance{
-  display: flex;
-  align-items: center;
-  margin-bottom: 1rem;
-}
-.balance .icon{
-  color: #fff;
-  font-size: 20px;
-  border-radius: 6px;
-  margin-right: 1rem;
-  padding: 1rem;
-  background: rgb(37, 37, 37);
-}
-.balance .info h5{
-  font-size: 16px;
-}
-.balance .info span{
-  font-size: 14px;
-  color: rgb(100, 100, 100);
-}
-.balance .info i{
-  margin-right: 2px;
 }
