--- a/css/style.css
+++ b/css/style.css
@@ -123,41 +123,9 @@ ul li a:hover{
       font-family: 'Poppins', sans-serif;  
       color: #F0A500;
  }  
- body{  
-      width: 100%;  
-      min-height: 100vh;  
-      background:#334756 ;  
-      display: flex;  
-      justify-content: center;  
-      align-items: center;  
- }  
- .container{  
-      max-width: 400px;  
-      width: 100%;  
-      box-shadow: 0px 0px 2px #E8E8E8;  
-      background: #fff;  
-      position: relative;  
- }  
- .container::before{  
-      content: "";  
-      width: 100%;  
-      height: 8px;  
-      position: absolute;  
-      top: -1px;  
-      border-top-left-radius: 3px;  
-      border-top-right-radius: 3px;  
-      background: #261160;  
- }  
- .container h2{  
-      text-align: center;  
-      margin-top: 20px;  
- }  
- .container form{  
-      width: 100%;  
-      padding: 20px 50px;  
- }  
+  
  .container form .box{  
-      width: 100%;  
+      width: 50%;  
       height: 40px;  
       position: relative;  
       border: 1px solid rgb(37, 37, 37);  
@@ -165,7 +133,7 @@ ul li a:hover{
  }  
  .box .input-data,  
  .box .select-data{  
-      position: absolute;  
+      position:absolute;  
       top: 0;  
       width: 90%;  
       outline: none;  
@@ -178,7 +146,7 @@ ul li a:hover{
       width: 100%;  
  }  
  .box span{  
-      position: absolute;  
+    position: relative;  
    top: -1px;  
    left: 0%;  
    font-size: 1.2em;  
@@ -198,14 +166,11 @@ ul li a:hover{
       font-size: 1em;  
       border: none;  
  }  
- @media (max-width: 424px) {  
-      .container form{  
-           padding: 20px;  
-      }  
- } 
+ 
  .container{
-	max-width: 400px;  
+	max-width: 800px;  
 	width: 100%;  
+  height: 80%;
 	box-shadow: 0px 0px 2px #E8E8E8;  
 	background: rgb(37, 37, 37);  
 	position:relative;
@@ -233,14 +198,7 @@ ul li a:hover{
 .container form{  
 		 width: 100%;  
 		 padding: 20px 50px;  
-}  
-.container .box{  
-		 width: 100%;  
-		 height: 40px;  
-		 position: relative;  
-		 border: 1px solid #DFDFDF;  
-		 margin: 10px 0px;   
-}
+} 
 .required {
 	color: red;
   }
